# ChainConsumer

./: .codacy.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  deploy.sh  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml  test_chain.py
.github/workflows/: dependabot.yml  deploy.yml
api/chain/: index.html
api/chainconfig/: index.html
api/consumer/: index.html
api/plotconfig/: index.html
api/plotter/: index.html
api/truth/: index.html
chain_consumer/: chain.py
chainconsumer/: __init__.py  analysis.py  chain.py  chainconsumer.py  colors.py  comparisons.py  diagnostic.py  helpers.py  kde.py  plotter.py  text.py
conda/: conda_build_config.yaml  deploy_anaconda.sh  meta.yaml
doc/: Makefile  build.bat  chain_api.rst  conf.py  index.rst  make.bat  usage.rst
doc/_static/: theme_override.css
doc_sphinx/: build.bat  conf.py  index.rst  make.bat  usage.rst
docs/: api.md  index.md  statistics.md  usage.md
docs/api/: api.md  chain.md  chainconfig.md  consumer.md  plotconfig.md  plotter.md  truth.md
docs/examples/: README.md  plot_0_contours.py  plot_3_distributions.py  plot_4_walks.py  plot_5_emcee_arviz_numpyro.py  plot_6_custom_axes.py  plot_7_multimodal_chains.py  plot_contours.py
docs/examples/advanced_examples/: README.md  plot_0_grid.py  plot_2_kde.py  plot_3_divide_chains.py  plot_4_misc_chain_visuals.py  plot_5_multiple_truth_values.py
docs/plugins/: griffe_doclinks.py
docs/resources/: generate_stats.py
ex/: demoOneChain.py  demoTable.py  demoThreeChains.py  demoTwoDisjointChains.py  demoWalk.py  demo_data.py  demo_various_2.py  demo_various_3.py  demo_various_4.py  demo_various_5.py  demo_various_6.py  demo_various_7.py  demo_various_8.py  demo_various_9.py  plot_various_1.py
examples/: README.txt  plot_cloud_sigma.py  plot_colours_shade.py  plot_correlations.py  plot_covariance.py  plot_distributions.py  plot_fewer_parameters.py  plot_introduction.py  plot_kde_extents.py  plot_model_selection.py  plot_no_histograms.py  plot_one_chain.py  plot_summary.py  plot_table.py  plot_three_chains.py  plot_two_disjoint_chains.py  plot_walk.py
examples/Basics/: README.txt  plot_convergence.py  plot_covariance_and_marker.py  plot_grid.py  plot_hundreds_of_chains.py  plot_loading_data.py  plot_statistics.py  plot_truth_values.py  plot_two_disjoint_chains.py
examples/customisations/: README.txt  plot_as_prior.py  plot_axis.py  plot_blinding.py  plot_chain_override.py  plot_cloud_sigma.py  plot_colorpoints.py  plot_colours_shade.py  plot_confidence_levels.py  plot_contour_labels.py  plot_dont_flip.py  plot_fewer_parameters.py  plot_font_changes.py  plot_kde_extents.py  plot_legend_options.py  plot_linestyles.py  plot_lists.py  plot_loading_data.py  plot_logscale.py  plot_no_histograms.py  plot_no_smooth.py  plot_one_chain.py  plot_preliminary.py  plot_rainbow_serif_bins.py  plot_selected_chains.py  plot_shade_gradient.py  plot_shift.py  plot_spacing.py  plot_three_chains.py  plot_truth_values.py  plot_zorder.py
examples/more/: README.txt  plot_colorpoints.py  plot_colorpoints2.py  plot_divide_chain.py  plot_many.py
paper/: paper.bib  paper.json  paper.md
plugins/: griffe_doclinks.py
search/: search_index.json
src/chainconsumer/: TODO.md  __init__.py  analysis.py  base.py  chain.py  chainconsumer.py  color_finder.py  colors.py  comparisons.py  diagnostic.py  examples.py  helpers.py  kde.py  log.py  plotter.py  something.py  statistics.py  summary_stats.py  translator.py  truth.py
src/chainconsumer/plotting/: __init__.py  config.py  contours.py  truth.py  watermark.py
tests/: test_analysis.py  test_chain.py  test_chainconsumer.py  test_colours.py  test_comparisons.py  test_diagnostic.py  test_helpers.py  test_kde.py  test_plotter.py  test_summary_power.py  test_translators.py
usage/: index.html
